tests/languages/cangjie/snapshots/brackets.snap
---
source: tests/support/mod.rs
assertion_line: 81
expression: captures
---
- name: open
  line: 9
  column: 16
  text: (
- name: close
  line: 9
  column: 29
  text: )
- name: open
  line: 9
  column: 31
  text: "{"
- name: close
  line: 12
  column: 5
  text: "}"
- name: open
  line: 14
  column: 22
  text: (
- name: close
  line: 14
  column: 23
  text: )
- name: open
  line: 15
  column: 16
  text: "\""
- name: close
  line: 15
  column: 32
  text: "\""
- name: open
  line: 14
  column: 33
  text: "{"
- name: close
  line: 16
  column: 5
  text: "}"
- name: open
  line: 18
  column: 24
  text: (
- name: close
  line: 18
  column: 25
  text: )
- name: open
  line: 18
  column: 35
  text: "{"
- name: close
  line: 20
  column: 5
  text: "}"
- name: open
  line: 22
  column: 25
  text: (
- name: close
  line: 22
  column: 26
  text: )
- name: open
  line: 22
  column: 35
  text: "{"
- name: close
  line: 24
  column: 5
  text: "}"
- name: open
  line: 5
  column: 17
  text: "{"
- name: close
  line: 25
  column: 1
  text: "}"
- name: open
  line: 27
  column: 5
  text: (
- name: close
  line: 27
  column: 6
  text: )
- name: open
  line: 28
  column: 30
  text: "\""
- name: close
  line: 28
  column: 36
  text: "\""
- name: open
  line: 28
  column: 29
  text: (
- name: close
  line: 28
  column: 37
  text: )
- name: open
  line: 29
  column: 27
  text: (
- name: close
  line: 29
  column: 28
  text: )
- name: open
  line: 29
  column: 12
  text: (
- name: close
  line: 29
  column: 29
  text: )
- name: open
  line: 30
  column: 51
  text: (
- name: close
  line: 30
  column: 52
  text: )
- name: open
  line: 30
  column: 13
  text: "\""
- name: close
  line: 30
  column: 54
  text: "\""
- name: open
  line: 30
  column: 12
  text: (
- name: close
  line: 30
  column: 55
  text: )
- name: open
  line: 27
  column: 8
  text: "{"
- name: close
  line: 31
  column: 1
  text: "}"
- name: open
  line: 33
  column: 12
  text: (
- name: close
  line: 33
  column: 13
  text: )
- name: open
  line: 33
  column: 21
  text: "{"
- name: close
  line: 35
  column: 1
  text: "}"
- name: open
  line: 41
  column: 16
  text: (
- name: close
  line: 41
  column: 39
  text: )
- name: open
  line: 41
  column: 41
  text: "{"
- name: close
  line: 44
  column: 5
  text: "}"
- name: open
  line: 46
  column: 25
  text: (
- name: close
  line: 46
  column: 26
  text: )
- name: open
  line: 47
  column: 16
  text: (
- name: close
  line: 47
  column: 36
  text: )
- name: open
  line: 46
  column: 37
  text: "{"
- name: close
  line: 48
  column: 5
  text: "}"
- name: open
  line: 50
  column: 23
  text: (
- name: close
  line: 50
  column: 48
  text: )
- name: open
  line: 50
  column: 56
  text: "{"
- name: close
  line: 53
  column: 5
  text: "}"
- name: open
  line: 37
  column: 14
  text: "{"
- name: close
  line: 54
  column: 1
  text: "}"
- name: open
  line: 57
  column: 14
  text: (
- name: close
  line: 57
  column: 15
  text: )
- name: open
  line: 56
  column: 20
  text: "{"
- name: close
  line: 58
  column: 1
  text: "}"
- name: open
  line: 64
  column: 13
  text: (
- name: close
  line: 64
  column: 39
  text: )
- name: open
  line: 60
  column: 12
  text: "{"
- name: close
  line: 65
  column: 1
  text: "}"
- name: open
  line: 68
  column: 21
  text: (
- name: close
  line: 68
  column: 22
  text: )
- name: open
  line: 69
  column: 17
  text: "\""
- name: close
  line: 69
  column: 39
  text: "\""
- name: open
  line: 69
  column: 16
  text: (
- name: close
  line: 69
  column: 40
  text: )
- name: open
  line: 68
  column: 30
  text: "{"
- name: close
  line: 70
  column: 5
  text: "}"
- name: open
  line: 67
  column: 26
  text: "{"
- name: close
  line: 71
  column: 1
  text: "}"
- name: open
  line: 76
  column: 16
  text: (
- name: close
  line: 76
  column: 56
  text: )
- name: open
  line: 77
  column: 19
  text: (
- name: close
  line: 77
  column: 24
  text: )
- name: open
  line: 76
  column: 58
  text: "{"
- name: close
  line: 79
  column: 5
  text: "}"
- name: open
  line: 81
  column: 34
  text: (
- name: close
  line: 81
  column: 35
  text: )
- name: open
  line: 81
  column: 46
  text: "{"
- name: close
  line: 83
  column: 5
  text: "}"
- name: open
  line: 73
  column: 23
  text: "{"
- name: close
  line: 84
  column: 1
  text: "}"
