tests/languages/cangjie/snapshots/highlights.snap
---
source: tests/support/mod.rs
assertion_line: 81
expression: captures
---
- name: keyword.import
  line: 1
  column: 1
  text: package
- name: namespace
  line: 1
  column: 9
  text: com
- name: punctuation.delimiter
  line: 1
  column: 12
  text: "."
- name: namespace
  line: 1
  column: 13
  text: example
- name: punctuation.delimiter
  line: 1
  column: 20
  text: "."
- name: namespace
  line: 1
  column: 21
  text: main
- name: keyword.import
  line: 3
  column: 1
  text: import
- name: namespace
  line: 3
  column: 8
  text: std
- name: punctuation.delimiter
  line: 3
  column: 11
  text: "."
- name: namespace
  line: 3
  column: 12
  text: io
- name: punctuation.delimiter
  line: 3
  column: 14
  text: "."
- name: operator
  line: 3
  column: 15
  text: "*"
- name: keyword.type
  line: 5
  column: 1
  text: class
- name: type
  line: 5
  column: 7
  text: MainClass
- name: punctuation.bracket
  line: 5
  column: 17
  text: "{"
- name: keyword.storage
  line: 6
  column: 5
  text: var
- name: variable
  line: 6
  column: 9
  text: name
- name: variable
  line: 6
  column: 9
  text: name
- name: punctuation.delimiter
  line: 6
  column: 13
  text: ":"
- name: type
  line: 6
  column: 15
  text: String
- name: keyword.modifier
  line: 7
  column: 5
  text: static
- name: keyword.storage
  line: 7
  column: 12
  text: var
- name: variable
  line: 7
  column: 16
  text: count
- name: variable
  line: 7
  column: 16
  text: count
- name: punctuation.delimiter
  line: 7
  column: 21
  text: ":"
- name: type
  line: 7
  column: 23
  text: Int64
- name: operator
  line: 7
  column: 29
  text: "="
- name: number
  line: 7
  column: 31
  text: "0"
- name: constructor
  line: 9
  column: 5
  text: "public init(name: String) {\n        this.name = name\n        count += 1\n    }"
- name: keyword.modifier
  line: 9
  column: 5
  text: public
- name: keyword.function
  line: 9
  column: 12
  text: init
- name: punctuation.bracket
  line: 9
  column: 16
  text: (
- name: variable.parameter
  line: 9
  column: 17
  text: name
- name: punctuation.delimiter
  line: 9
  column: 21
  text: ":"
- name: type
  line: 9
  column: 23
  text: String
- name: punctuation.bracket
  line: 9
  column: 29
  text: )
- name: punctuation.bracket
  line: 9
  column: 31
  text: "{"
- name: variable.builtin
  line: 10
  column: 9
  text: this
- name: keyword
  line: 10
  column: 9
  text: this
- name: punctuation.delimiter
  line: 10
  column: 13
  text: "."
- name: variable
  line: 10
  column: 14
  text: name
- name: operator
  line: 10
  column: 19
  text: "="
- name: variable
  line: 10
  column: 21
  text: name
- name: variable
  line: 11
  column: 9
  text: count
- name: operator
  line: 11
  column: 15
  text: +=
- name: number
  line: 11
  column: 18
  text: "1"
- name: punctuation.bracket
  line: 12
  column: 5
  text: "}"
- name: keyword.modifier
  line: 14
  column: 5
  text: public
- name: keyword.function
  line: 14
  column: 12
  text: func
- name: function
  line: 14
  column: 17
  text: greet
- name: function
  line: 14
  column: 17
  text: greet
- name: punctuation.bracket
  line: 14
  column: 22
  text: (
- name: punctuation.bracket
  line: 14
  column: 23
  text: )
- name: punctuation.delimiter
  line: 14
  column: 24
  text: ":"
- name: type
  line: 14
  column: 26
  text: String
- name: punctuation.bracket
  line: 14
  column: 33
  text: "{"
- name: keyword.return
  line: 15
  column: 9
  text: return
- name: string
  line: 15
  column: 16
  text: "\"Hello, ${name}!\""
- name: variable
  line: 15
  column: 26
  text: name
- name: punctuation.special
  line: 15
  column: 24
  text: "${"
- name: punctuation.special
  line: 15
  column: 30
  text: "}"
- name: punctuation.bracket
  line: 15
  column: 30
  text: "}"
- name: punctuation.bracket
  line: 16
  column: 5
  text: "}"
- name: keyword.modifier
  line: 18
  column: 5
  text: public
- name: keyword.function
  line: 18
  column: 12
  text: func
- name: function
  line: 18
  column: 17
  text: getName
- name: function
  line: 18
  column: 17
  text: getName
- name: punctuation.bracket
  line: 18
  column: 24
  text: (
- name: punctuation.bracket
  line: 18
  column: 25
  text: )
- name: punctuation.delimiter
  line: 18
  column: 26
  text: ":"
- name: type
  line: 18
  column: 28
  text: String
- name: punctuation.bracket
  line: 18
  column: 35
  text: "{"
- name: keyword.return
  line: 19
  column: 9
  text: return
- name: variable
  line: 19
  column: 16
  text: name
- name: punctuation.bracket
  line: 20
  column: 5
  text: "}"
- name: keyword.modifier
  line: 22
  column: 5
  text: static
- name: keyword.function
  line: 22
  column: 12
  text: func
- name: function
  line: 22
  column: 17
  text: getCount
- name: function
  line: 22
  column: 17
  text: getCount
- name: punctuation.bracket
  line: 22
  column: 25
  text: (
- name: punctuation.bracket
  line: 22
  column: 26
  text: )
- name: punctuation.delimiter
  line: 22
  column: 27
  text: ":"
- name: type
  line: 22
  column: 29
  text: Int64
- name: punctuation.bracket
  line: 22
  column: 35
  text: "{"
- name: keyword.return
  line: 23
  column: 9
  text: return
- name: variable
  line: 23
  column: 16
  text: count
- name: punctuation.bracket
  line: 24
  column: 5
  text: "}"
- name: punctuation.bracket
  line: 25
  column: 1
  text: "}"
- name: keyword.function
  line: 27
  column: 1
  text: main
- name: punctuation.bracket
  line: 27
  column: 5
  text: (
- name: punctuation.bracket
  line: 27
  column: 6
  text: )
- name: punctuation.bracket
  line: 27
  column: 8
  text: "{"
- name: keyword.storage
  line: 28
  column: 5
  text: let
- name: variable
  line: 28
  column: 9
  text: instance
- name: variable
  line: 28
  column: 9
  text: instance
- name: operator
  line: 28
  column: 18
  text: "="
- name: variable
  line: 28
  column: 20
  text: MainClass
- name: punctuation.bracket
  line: 28
  column: 29
  text: (
- name: string
  line: 28
  column: 30
  text: "\"World\""
- name: punctuation.bracket
  line: 28
  column: 37
  text: )
- name: variable
  line: 29
  column: 5
  text: println
- name: punctuation.bracket
  line: 29
  column: 12
  text: (
- name: variable
  line: 29
  column: 13
  text: instance
- name: punctuation.delimiter
  line: 29
  column: 21
  text: "."
- name: variable
  line: 29
  column: 22
  text: greet
- name: punctuation.bracket
  line: 29
  column: 27
  text: (
- name: punctuation.bracket
  line: 29
  column: 28
  text: )
- name: punctuation.bracket
  line: 29
  column: 29
  text: )
- name: variable
  line: 30
  column: 5
  text: println
- name: punctuation.bracket
  line: 30
  column: 12
  text: (
- name: string
  line: 30
  column: 13
  text: "\"Total instances: ${MainClass.getCount()}\""
- name: variable
  line: 30
  column: 33
  text: MainClass
- name: punctuation.delimiter
  line: 30
  column: 42
  text: "."
- name: variable
  line: 30
  column: 43
  text: getCount
- name: punctuation.bracket
  line: 30
  column: 51
  text: (
- name: punctuation.bracket
  line: 30
  column: 52
  text: )
- name: punctuation.special
  line: 30
  column: 31
  text: "${"
- name: punctuation.special
  line: 30
  column: 53
  text: "}"
- name: punctuation.bracket
  line: 30
  column: 53
  text: "}"
- name: punctuation.bracket
  line: 30
  column: 55
  text: )
- name: punctuation.bracket
  line: 31
  column: 1
  text: "}"
- name: keyword.function
  line: 33
  column: 1
  text: func
- name: function
  line: 33
  column: 6
  text: helper
- name: function
  line: 33
  column: 6
  text: helper
- name: punctuation.bracket
  line: 33
  column: 12
  text: (
- name: punctuation.bracket
  line: 33
  column: 13
  text: )
- name: punctuation.delimiter
  line: 33
  column: 14
  text: ":"
- name: type
  line: 33
  column: 16
  text: Bool
- name: punctuation.bracket
  line: 33
  column: 21
  text: "{"
- name: keyword.return
  line: 34
  column: 5
  text: return
- name: variable
  line: 34
  column: 12
  text: "true"
- name: punctuation.bracket
  line: 35
  column: 1
  text: "}"
- name: keyword.type
  line: 37
  column: 1
  text: struct
- name: type
  line: 37
  column: 8
  text: Point
- name: punctuation.bracket
  line: 37
  column: 14
  text: "{"
- name: keyword.storage
  line: 38
  column: 5
  text: var
- name: variable
  line: 38
  column: 9
  text: x
- name: variable
  line: 38
  column: 9
  text: x
- name: punctuation.delimiter
  line: 38
  column: 10
  text: ":"
- name: type
  line: 38
  column: 12
  text: Float64
- name: keyword.storage
  line: 39
  column: 5
  text: var
- name: variable
  line: 39
  column: 9
  text: y
- name: variable
  line: 39
  column: 9
  text: y
- name: punctuation.delimiter
  line: 39
  column: 10
  text: ":"
- name: type
  line: 39
  column: 12
  text: Float64
- name: constructor
  line: 41
  column: 5
  text: "public init(x: Float64, y: Float64) {\n        this.x = x\n        this.y = y\n    }"
- name: keyword.modifier
  line: 41
  column: 5
  text: public
- name: keyword.function
  line: 41
  column: 12
  text: init
- name: punctuation.bracket
  line: 41
  column: 16
  text: (
- name: variable.parameter
  line: 41
  column: 17
  text: x
- name: punctuation.delimiter
  line: 41
  column: 18
  text: ":"
- name: type
  line: 41
  column: 20
  text: Float64
- name: punctuation.delimiter
  line: 41
  column: 27
  text: ","
- name: variable.parameter
  line: 41
  column: 29
  text: y
- name: punctuation.delimiter
  line: 41
  column: 30
  text: ":"
- name: type
  line: 41
  column: 32
  text: Float64
- name: punctuation.bracket
  line: 41
  column: 39
  text: )
- name: punctuation.bracket
  line: 41
  column: 41
  text: "{"
- name: variable.builtin
  line: 42
  column: 9
  text: this
- name: keyword
  line: 42
  column: 9
  text: this
- name: punctuation.delimiter
  line: 42
  column: 13
  text: "."
- name: variable
  line: 42
  column: 14
  text: x
- name: operator
  line: 42
  column: 16
  text: "="
- name: variable
  line: 42
  column: 18
  text: x
- name: variable.builtin
  line: 43
  column: 9
  text: this
- name: keyword
  line: 43
  column: 9
  text: this
- name: punctuation.delimiter
  line: 43
  column: 13
  text: "."
- name: variable
  line: 43
  column: 14
  text: y
- name: operator
  line: 43
  column: 16
  text: "="
- name: variable
  line: 43
  column: 18
  text: y
- name: punctuation.bracket
  line: 44
  column: 5
  text: "}"
- name: keyword.modifier
  line: 46
  column: 5
  text: public
- name: keyword.function
  line: 46
  column: 12
  text: func
- name: function
  line: 46
  column: 17
  text: distance
- name: function
  line: 46
  column: 17
  text: distance
- name: punctuation.bracket
  line: 46
  column: 25
  text: (
- name: punctuation.bracket
  line: 46
  column: 26
  text: )
- name: punctuation.delimiter
  line: 46
  column: 27
  text: ":"
- name: type
  line: 46
  column: 29
  text: Float64
- name: punctuation.bracket
  line: 46
  column: 37
  text: "{"
- name: keyword.return
  line: 47
  column: 9
  text: return
- name: punctuation.bracket
  line: 47
  column: 16
  text: (
- name: variable
  line: 47
  column: 17
  text: x
- name: operator
  line: 47
  column: 19
  text: "**"
- name: number
  line: 47
  column: 22
  text: "2.0"
- name: operator
  line: 47
  column: 26
  text: +
- name: variable
  line: 47
  column: 28
  text: y
- name: operator
  line: 47
  column: 30
  text: "**"
- name: number
  line: 47
  column: 33
  text: "2.0"
- name: punctuation.bracket
  line: 47
  column: 36
  text: )
- name: operator
  line: 47
  column: 38
  text: "**"
- name: number
  line: 47
  column: 41
  text: "0.5"
- name: punctuation.bracket
  line: 48
  column: 5
  text: "}"
- name: keyword.modifier
  line: 50
  column: 5
  text: mut
- name: keyword.function
  line: 50
  column: 9
  text: func
- name: function
  line: 50
  column: 14
  text: translate
- name: function
  line: 50
  column: 14
  text: translate
- name: punctuation.bracket
  line: 50
  column: 23
  text: (
- name: variable.parameter
  line: 50
  column: 24
  text: dx
- name: punctuation.delimiter
  line: 50
  column: 26
  text: ":"
- name: type
  line: 50
  column: 28
  text: Float64
- name: punctuation.delimiter
  line: 50
  column: 35
  text: ","
- name: variable.parameter
  line: 50
  column: 37
  text: dy
- name: punctuation.delimiter
  line: 50
  column: 39
  text: ":"
- name: type
  line: 50
  column: 41
  text: Float64
- name: punctuation.bracket
  line: 50
  column: 48
  text: )
- name: punctuation.delimiter
  line: 50
  column: 49
  text: ":"
- name: type
  line: 50
  column: 51
  text: Unit
- name: punctuation.bracket
  line: 50
  column: 56
  text: "{"
- name: variable
  line: 51
  column: 9
  text: x
- name: operator
  line: 51
  column: 11
  text: +=
- name: variable
  line: 51
  column: 14
  text: dx
- name: variable
  line: 52
  column: 9
  text: y
- name: operator
  line: 52
  column: 11
  text: +=
- name: variable
  line: 52
  column: 14
  text: dy
- name: punctuation.bracket
  line: 53
  column: 5
  text: "}"
- name: punctuation.bracket
  line: 54
  column: 1
  text: "}"
- name: keyword.type
  line: 56
  column: 1
  text: interface
- name: type
  line: 56
  column: 11
  text: Drawable
- name: punctuation.bracket
  line: 56
  column: 20
  text: "{"
- name: keyword.function
  line: 57
  column: 5
  text: func
- name: function
  line: 57
  column: 10
  text: draw
- name: function
  line: 57
  column: 10
  text: draw
- name: punctuation.bracket
  line: 57
  column: 14
  text: (
- name: punctuation.bracket
  line: 57
  column: 15
  text: )
- name: punctuation.delimiter
  line: 57
  column: 16
  text: ":"
- name: type
  line: 57
  column: 18
  text: Unit
- name: punctuation.bracket
  line: 58
  column: 1
  text: "}"
- name: keyword.type
  line: 60
  column: 1
  text: enum
- name: type
  line: 60
  column: 6
  text: Color
- name: punctuation.bracket
  line: 60
  column: 12
  text: "{"
- name: operator
  line: 61
  column: 5
  text: "|"
- name: operator
  line: 62
  column: 5
  text: "|"
- name: operator
  line: 63
  column: 5
  text: "|"
- name: operator
  line: 64
  column: 5
  text: "|"
- name: punctuation.bracket
  line: 64
  column: 13
  text: (
- name: punctuation.delimiter
  line: 64
  column: 21
  text: ","
- name: punctuation.delimiter
  line: 64
  column: 30
  text: ","
- name: punctuation.bracket
  line: 64
  column: 39
  text: )
- name: punctuation.bracket
  line: 65
  column: 1
  text: "}"
- name: keyword.type
  line: 67
  column: 1
  text: extend
- name: operator
  line: 67
  column: 14
  text: "<:"
- name: type
  line: 67
  column: 17
  text: Drawable
- name: punctuation.bracket
  line: 67
  column: 26
  text: "{"
- name: keyword.modifier
  line: 68
  column: 5
  text: public
- name: keyword.function
  line: 68
  column: 12
  text: func
- name: function
  line: 68
  column: 17
  text: draw
- name: function
  line: 68
  column: 17
  text: draw
- name: punctuation.bracket
  line: 68
  column: 21
  text: (
- name: punctuation.bracket
  line: 68
  column: 22
  text: )
- name: punctuation.delimiter
  line: 68
  column: 23
  text: ":"
- name: type
  line: 68
  column: 25
  text: Unit
- name: punctuation.bracket
  line: 68
  column: 30
  text: "{"
- name: variable
  line: 69
  column: 9
  text: println
- name: punctuation.bracket
  line: 69
  column: 16
  text: (
- name: string
  line: 69
  column: 17
  text: "\"Point at (${x}, ${y})\""
- name: variable
  line: 69
  column: 30
  text: x
- name: punctuation.special
  line: 69
  column: 28
  text: "${"
- name: punctuation.special
  line: 69
  column: 31
  text: "}"
- name: punctuation.bracket
  line: 69
  column: 31
  text: "}"
- name: variable
  line: 69
  column: 36
  text: y
- name: punctuation.special
  line: 69
  column: 34
  text: "${"
- name: punctuation.special
  line: 69
  column: 37
  text: "}"
- name: punctuation.bracket
  line: 69
  column: 37
  text: "}"
- name: punctuation.bracket
  line: 69
  column: 40
  text: )
- name: punctuation.bracket
  line: 70
  column: 5
  text: "}"
- name: punctuation.bracket
  line: 71
  column: 1
  text: "}"
- name: keyword.type
  line: 73
  column: 1
  text: class
- name: type
  line: 73
  column: 7
  text: Circle
- name: operator
  line: 73
  column: 14
  text: "<:"
- name: type
  line: 73
  column: 17
  text: Point
- name: punctuation.bracket
  line: 73
  column: 23
  text: "{"
- name: keyword.storage
  line: 74
  column: 5
  text: var
- name: variable
  line: 74
  column: 9
  text: radius
- name: variable
  line: 74
  column: 9
  text: radius
- name: punctuation.delimiter
  line: 74
  column: 15
  text: ":"
- name: type
  line: 74
  column: 17
  text: Float64
- name: constructor
  line: 76
  column: 5
  text: "public init(x: Float64, y: Float64, radius: Float64) {\n        super.init(x, y)\n        this.radius = radius\n    }"
- name: keyword.modifier
  line: 76
  column: 5
  text: public
- name: keyword.function
  line: 76
  column: 12
  text: init
- name: punctuation.bracket
  line: 76
  column: 16
  text: (
- name: variable.parameter
  line: 76
  column: 17
  text: x
- name: punctuation.delimiter
  line: 76
  column: 18
  text: ":"
- name: type
  line: 76
  column: 20
  text: Float64
- name: punctuation.delimiter
  line: 76
  column: 27
  text: ","
- name: variable.parameter
  line: 76
  column: 29
  text: y
- name: punctuation.delimiter
  line: 76
  column: 30
  text: ":"
- name: type
  line: 76
  column: 32
  text: Float64
- name: punctuation.delimiter
  line: 76
  column: 39
  text: ","
- name: variable.parameter
  line: 76
  column: 41
  text: radius
- name: punctuation.delimiter
  line: 76
  column: 47
  text: ":"
- name: type
  line: 76
  column: 49
  text: Float64
- name: punctuation.bracket
  line: 76
  column: 56
  text: )
- name: punctuation.bracket
  line: 76
  column: 58
  text: "{"
- name: variable.builtin
  line: 77
  column: 9
  text: super
- name: keyword
  line: 77
  column: 9
  text: super
- name: punctuation.delimiter
  line: 77
  column: 14
  text: "."
- name: variable
  line: 77
  column: 15
  text: init
- name: punctuation.bracket
  line: 77
  column: 19
  text: (
- name: variable
  line: 77
  column: 20
  text: x
- name: punctuation.delimiter
  line: 77
  column: 21
  text: ","
- name: variable
  line: 77
  column: 23
  text: y
- name: punctuation.bracket
  line: 77
  column: 24
  text: )
- name: variable.builtin
  line: 78
  column: 9
  text: this
- name: keyword
  line: 78
  column: 9
  text: this
- name: punctuation.delimiter
  line: 78
  column: 13
  text: "."
- name: variable
  line: 78
  column: 14
  text: radius
- name: operator
  line: 78
  column: 21
  text: "="
- name: variable
  line: 78
  column: 23
  text: radius
- name: punctuation.bracket
  line: 79
  column: 5
  text: "}"
- name: keyword.modifier
  line: 81
  column: 5
  text: public
- name: keyword.modifier
  line: 81
  column: 12
  text: override
- name: keyword.function
  line: 81
  column: 21
  text: func
- name: function
  line: 81
  column: 26
  text: distance
- name: function
  line: 81
  column: 26
  text: distance
- name: punctuation.bracket
  line: 81
  column: 34
  text: (
- name: punctuation.bracket
  line: 81
  column: 35
  text: )
- name: punctuation.delimiter
  line: 81
  column: 36
  text: ":"
- name: type
  line: 81
  column: 38
  text: Float64
- name: punctuation.bracket
  line: 81
  column: 46
  text: "{"
- name: keyword.return
  line: 82
  column: 9
  text: return
- name: variable
  line: 82
  column: 16
  text: radius
- name: punctuation.bracket
  line: 83
  column: 5
  text: "}"
- name: punctuation.bracket
  line: 84
  column: 1
  text: "}"
