tests/languages/cangjie/snapshots/indents.snap
---
source: tests/support/mod.rs
assertion_line: 81
expression: captures
---
- name: indent.begin
  line: 5
  column: 17
  text: "{\n    var name: String\n    static var count: Int64 = 0\n\n    public init(name: String) {\n        this.name = name\n        count += 1\n    }\n\n    public func greet(): String {\n        return \"Hello, ${name}!\"\n    }\n\n    public func getName(): String {\n        return name\n    }\n\n    static func getCount(): Int64 {\n        return count\n    }\n}"
- name: indent.begin
  line: 9
  column: 5
  text: "public init(name: String) {\n        this.name = name\n        count += 1\n    }"
- name: indent.end
  line: 9
  column: 29
  text: )
- name: indent.branch
  line: 9
  column: 29
  text: )
- name: indent.end
  line: 12
  column: 5
  text: "}"
- name: indent.branch
  line: 12
  column: 5
  text: "}"
- name: indent.end
  line: 14
  column: 23
  text: )
- name: indent.branch
  line: 14
  column: 23
  text: )
- name: indent.begin
  line: 14
  column: 33
  text: "{\n        return \"Hello, ${name}!\"\n    }"
- name: indent.end
  line: 15
  column: 30
  text: "}"
- name: indent.branch
  line: 15
  column: 30
  text: "}"
- name: indent.end
  line: 16
  column: 5
  text: "}"
- name: indent.branch
  line: 16
  column: 5
  text: "}"
- name: indent.end
  line: 18
  column: 25
  text: )
- name: indent.branch
  line: 18
  column: 25
  text: )
- name: indent.begin
  line: 18
  column: 35
  text: "{\n        return name\n    }"
- name: indent.end
  line: 20
  column: 5
  text: "}"
- name: indent.branch
  line: 20
  column: 5
  text: "}"
- name: indent.end
  line: 22
  column: 26
  text: )
- name: indent.branch
  line: 22
  column: 26
  text: )
- name: indent.begin
  line: 22
  column: 35
  text: "{\n        return count\n    }"
- name: indent.end
  line: 24
  column: 5
  text: "}"
- name: indent.branch
  line: 24
  column: 5
  text: "}"
- name: indent.end
  line: 25
  column: 1
  text: "}"
- name: indent.branch
  line: 25
  column: 1
  text: "}"
- name: indent.end
  line: 27
  column: 6
  text: )
- name: indent.branch
  line: 27
  column: 6
  text: )
- name: indent.begin
  line: 27
  column: 8
  text: "{\n    let instance = MainClass(\"World\")\n    println(instance.greet())\n    println(\"Total instances: ${MainClass.getCount()}\")\n}"
- name: indent.begin
  line: 28
  column: 29
  text: "(\"World\")"
- name: indent.end
  line: 28
  column: 37
  text: )
- name: indent.branch
  line: 28
  column: 37
  text: )
- name: indent.begin
  line: 29
  column: 12
  text: (instance.greet())
- name: indent.begin
  line: 29
  column: 27
  text: ()
- name: indent.end
  line: 29
  column: 28
  text: )
- name: indent.branch
  line: 29
  column: 28
  text: )
- name: indent.end
  line: 29
  column: 29
  text: )
- name: indent.branch
  line: 29
  column: 29
  text: )
- name: indent.begin
  line: 30
  column: 12
  text: "(\"Total instances: ${MainClass.getCount()}\")"
- name: indent.begin
  line: 30
  column: 51
  text: ()
- name: indent.end
  line: 30
  column: 52
  text: )
- name: indent.branch
  line: 30
  column: 52
  text: )
- name: indent.end
  line: 30
  column: 53
  text: "}"
- name: indent.branch
  line: 30
  column: 53
  text: "}"
- name: indent.end
  line: 30
  column: 55
  text: )
- name: indent.branch
  line: 30
  column: 55
  text: )
- name: indent.end
  line: 31
  column: 1
  text: "}"
- name: indent.branch
  line: 31
  column: 1
  text: "}"
- name: indent.end
  line: 33
  column: 13
  text: )
- name: indent.branch
  line: 33
  column: 13
  text: )
- name: indent.begin
  line: 33
  column: 21
  text: "{\n    return true\n}"
- name: indent.end
  line: 35
  column: 1
  text: "}"
- name: indent.branch
  line: 35
  column: 1
  text: "}"
- name: indent.begin
  line: 37
  column: 14
  text: "{\n    var x: Float64\n    var y: Float64\n\n    public init(x: Float64, y: Float64) {\n        this.x = x\n        this.y = y\n    }\n\n    public func distance(): Float64 {\n        return (x ** 2.0 + y ** 2.0) ** 0.5\n    }\n\n    mut func translate(dx: Float64, dy: Float64): Unit {\n        x += dx\n        y += dy\n    }\n}"
- name: indent.begin
  line: 41
  column: 5
  text: "public init(x: Float64, y: Float64) {\n        this.x = x\n        this.y = y\n    }"
- name: indent.end
  line: 41
  column: 39
  text: )
- name: indent.branch
  line: 41
  column: 39
  text: )
- name: indent.end
  line: 44
  column: 5
  text: "}"
- name: indent.branch
  line: 44
  column: 5
  text: "}"
- name: indent.end
  line: 46
  column: 26
  text: )
- name: indent.branch
  line: 46
  column: 26
  text: )
- name: indent.begin
  line: 46
  column: 37
  text: "{\n        return (x ** 2.0 + y ** 2.0) ** 0.5\n    }"
- name: indent.end
  line: 47
  column: 36
  text: )
- name: indent.branch
  line: 47
  column: 36
  text: )
- name: indent.end
  line: 48
  column: 5
  text: "}"
- name: indent.branch
  line: 48
  column: 5
  text: "}"
- name: indent.end
  line: 50
  column: 48
  text: )
- name: indent.branch
  line: 50
  column: 48
  text: )
- name: indent.begin
  line: 50
  column: 56
  text: "{\n        x += dx\n        y += dy\n    }"
- name: indent.end
  line: 53
  column: 5
  text: "}"
- name: indent.branch
  line: 53
  column: 5
  text: "}"
- name: indent.end
  line: 54
  column: 1
  text: "}"
- name: indent.branch
  line: 54
  column: 1
  text: "}"
- name: indent.begin
  line: 57
  column: 5
  text: "func draw(): Unit\n"
- name: indent.end
  line: 57
  column: 15
  text: )
- name: indent.branch
  line: 57
  column: 15
  text: )
- name: indent.end
  line: 58
  column: 1
  text: "}"
- name: indent.branch
  line: 58
  column: 1
  text: "}"
- name: indent.begin
  line: 60
  column: 12
  text: "{\n    | Red\n    | Green\n    | Blue\n    | Custom(Float64, Float64, Float64)\n}"
- name: indent.end
  line: 64
  column: 39
  text: )
- name: indent.branch
  line: 64
  column: 39
  text: )
- name: indent.end
  line: 65
  column: 1
  text: "}"
- name: indent.branch
  line: 65
  column: 1
  text: "}"
- name: indent.begin
  line: 67
  column: 26
  text: "{\n    public func draw(): Unit {\n        println(\"Point at (${x}, ${y})\")\n    }\n}"
- name: indent.end
  line: 68
  column: 22
  text: )
- name: indent.branch
  line: 68
  column: 22
  text: )
- name: indent.begin
  line: 68
  column: 30
  text: "{\n        println(\"Point at (${x}, ${y})\")\n    }"
- name: indent.begin
  line: 69
  column: 16
  text: "(\"Point at (${x}, ${y})\")"
- name: indent.end
  line: 69
  column: 31
  text: "}"
- name: indent.branch
  line: 69
  column: 31
  text: "}"
- name: indent.end
  line: 69
  column: 37
  text: "}"
- name: indent.branch
  line: 69
  column: 37
  text: "}"
- name: indent.end
  line: 69
  column: 40
  text: )
- name: indent.branch
  line: 69
  column: 40
  text: )
- name: indent.end
  line: 70
  column: 5
  text: "}"
- name: indent.branch
  line: 70
  column: 5
  text: "}"
- name: indent.end
  line: 71
  column: 1
  text: "}"
- name: indent.branch
  line: 71
  column: 1
  text: "}"
- name: indent.begin
  line: 73
  column: 23
  text: "{\n    var radius: Float64\n\n    public init(x: Float64, y: Float64, radius: Float64) {\n        super.init(x, y)\n        this.radius = radius\n    }\n\n    public override func distance(): Float64 {\n        return radius\n    }\n}"
- name: indent.begin
  line: 76
  column: 5
  text: "public init(x: Float64, y: Float64, radius: Float64) {\n        super.init(x, y)\n        this.radius = radius\n    }"
- name: indent.end
  line: 76
  column: 56
  text: )
- name: indent.branch
  line: 76
  column: 56
  text: )
- name: indent.begin
  line: 77
  column: 19
  text: "(x, y)"
- name: indent.end
  line: 77
  column: 24
  text: )
- name: indent.branch
  line: 77
  column: 24
  text: )
- name: indent.end
  line: 79
  column: 5
  text: "}"
- name: indent.branch
  line: 79
  column: 5
  text: "}"
- name: indent.end
  line: 81
  column: 35
  text: )
- name: indent.branch
  line: 81
  column: 35
  text: )
- name: indent.begin
  line: 81
  column: 46
  text: "{\n        return radius\n    }"
- name: indent.end
  line: 83
  column: 5
  text: "}"
- name: indent.branch
  line: 83
  column: 5
  text: "}"
- name: indent.end
  line: 84
  column: 1
  text: "}"
- name: indent.branch
  line: 84
  column: 1
  text: "}"
